--- a/Animation/index.html
+++ b/Animation/index.html
@@ -44,7 +44,7 @@
                     <p class="w3-text-blue-grey">Your career in the Air Force officially begins with Basic Military Training (BMT). It is a challenging experience both mentally and physically but will ultimately transform you from humble recruit to confident Airman with the skills and confidence you need to excel as a member of the U.S. Air Force.</p>
                 </div>
                 <div class="w3-third w3-center w3-jumbo">
-                    <i class="fa fa-fighter-jet w3-padding-64 w3-text-blue" aria-hidden="true"></i>
+                   <i class="fa fa-fighter-jet w3-padding-64 w3-text-blue" aria-hidden="true" onclick="mySound()"></i>
                 </div>
             </div>
         </div>
